--- a/style.css
+++ b/style.css
@@ -11,19 +11,29 @@ body{
   padding: 4em;
   color: rgba(255,255,255,.75);
   font-family: 'Anonymous Pro', monospace;  
-  background-color: rgb(25,25,25);  
+  background-color: #232A2F;  
 }
-.line-1{
-    position: relative;
-    top: 50%;  
-    width: 10em;
-    margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
-    font-size: 180%;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    transform: translateY(-50%);    
+
+.container {
+  display: flex;
+  justify-content: flex-start; /* Alinear a la izquierda */
+  align-items: flex-start; /* Alinear en la parte superior */
+  height: 100vh; /* Asegurar que el contenedor ocupe toda la altura de la ventana */
+  padding: 0; /* Eliminar padding */
+}
+
+.line-1 {
+  position: relative;
+  top: 0; /* Alinear en la parte superior */
+  left: 0; /* Alinear a la izquierda */
+  width: 10em;
+  margin: 0;
+  border-right: 2px solid rgba(255, 255, 255, .75);
+  font-size: 180%;
+  text-align: left; /* Alinear texto a la izquierda */
+  white-space: nowrap;
+  overflow: hidden;
+  transform: none; /* Eliminar transformación */
 }
 
 /* Animation */
@@ -39,3 +49,25 @@ body{
   from{border-right-color: rgba(255,255,255,.75);}
   to{border-right-color: transparent;}
 }
+
+/* Barra lateral izquierda */
+.sidebar {
+  position: absolute;
+  left: 0;
+  top: 30px;
+  width: 40px;
+  height: 100%;
+  background-color: #1A2023;
+  border: 0.5pt solid #101416;
+}
+
+.topbar {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 30px;
+  background-color: #1A2023;
+  border: 0.5pt solid #101416;
+}
+
