--- a/style.css
+++ b/style.css
@@ -84,10 +84,10 @@ body{
 
 .explorerbar {
   position: absolute;
-  left: 0;
+  left: 40px;
   top: 30px;
-  width: 40px;
-  height: 100%;
+  width: 140px;
+  height: 26px;
   background-color: #1A2023;
   border: 0.5pt solid #101416;
 }
