--- a/style.css
+++ b/style.css
@@ -91,3 +91,59 @@ body{
   background-color: #1A2023;
   border: 0.5pt solid #101416;
 }
+
+.menu {
+  list-style-type: none;
+  height: 25px;
+  width: 40px;
+  margin: 0;
+  padding: 0;
+  background-color: #07070700;
+  position: absolute;
+  top: 30px;
+  left: 0;
+}
+
+.menu li {
+  position: relative;
+  display: block;
+}
+
+.menu li a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.menu li a:hover {
+  background-color: #2C3134;
+}
+
+.submenu {
+  display: none;
+  position: absolute;
+  background-color: #1A2023;
+  width: 160px;
+  height: 50px;
+  left: 100%;
+  top: 0;
+  z-index: 1;
+}
+
+.submenu a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.submenu a:hover {
+  background-color: #2C3134;
+}
+
+
