--- a/style.css
+++ b/style.css
@@ -50,8 +50,8 @@ body{
   to{border-right-color: transparent;}
 }
 
-/* Barra lateral izquierda */
 .sidebar {
+  user-select: none;
   position: absolute;
   left: 0;
   top: 30px;
@@ -62,6 +62,7 @@ body{
 }
 
 .topbar {
+  user-select: none;
   position: absolute;
   left: 0;
   top: 0;
@@ -72,6 +73,7 @@ body{
 }
 
 .searchbar {
+  user-select: none;
   position: absolute;
   left: 32%;
   top: 4px;
@@ -83,6 +85,7 @@ body{
 }
 
 .menu {
+  user-select: none;
   list-style-type: none;
   height: 40px; /* Ajustar la altura */
   width: 40px;
